# okular-backend-mupdf

./: .gitignore  CMakeLists-fitz.txt  CMakeLists.txt  Messages.sh  README.md  document.cpp  document.hpp  generator_mupdf.cpp  generator_mupdf.h  generator_mupdf.hpp  get-mupdf.sh  libokularGenerator_mupdf.desktop  okularApplication_mupdf.desktop  okularMupdf.desktop  page.cpp  page.hpp  qmupdf.cpp  qmupdf.h  qmupdf_p.h
arch/: PKGBUILD
cmake/modules/: Findjbig2dec.cmake
synctex/: synctex_parser.c  synctex_parser_utils.c
